--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -6,7 +6,7 @@
     background: linear-gradient(to top, black, rgba(255, 255, 255, 0));
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     padding: 2% 4%;
     z-index: 1;
 }
@@ -23,11 +23,17 @@
 .icon {
     transition: all 0.15s ease-in-out;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 18px;
+    margin-top: 7px;
 }
 
 .icon:hover {
     transform: scale(1.3);
+}
 
+@media screen and (max-width: 830px){
+    .icon {
+        font-size: 16px;
+    }
 }
 
