--- a/src/components/DatePicker/DatePicker.module.css
+++ b/src/components/DatePicker/DatePicker.module.css
@@ -31,6 +31,7 @@
     font-size: 16px;
     margin-bottom: 6px;
     cursor: pointer;
+    background-color: black;
 }
 
 .submitBtn {
@@ -42,6 +43,7 @@
     cursor: pointer;
     border: 1px solid white;
     transition: all .15s ease-in-out;
+    color: white;
 }
 
 .submitBtn:hover {
