--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -9,6 +9,7 @@
     align-items: center;
     padding: 2% 4%;
     z-index: 1;
+    gap: 15px;
 }
 
 .title .apod {
@@ -36,7 +37,7 @@
 }
 
 .title h2{
-    font-size: clamp(20px, 2vw, 30px);
+    font-size: clamp(18px, 2vw, 26px);
     font-weight: 300;
     letter-spacing: 2px;
 }
@@ -49,15 +50,15 @@
     height: 100%;
     display: flex;
     flex-direction: column-reverse;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 }
 
 .btnContainer .icon {
     transition: all 0.2s ease-in-out;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 30px;
 }
 
 .btnContainer .icon:hover {
@@ -65,7 +66,7 @@
 }
 
 .btnContainer .expand {
-    font-size: 18px;
+    font-size: 30px;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
 }
