--- a/src/components/DatePicker/DatePicker.module.css
+++ b/src/components/DatePicker/DatePicker.module.css
@@ -1,63 +1,65 @@
 .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .container > div {
-    width: 100%; /* First child div */
+  width: 100%; /* First child div */
 }
 
 .container > div > div {
-    width: 100%; /* First child div */
-    display: flex;
-    justify-content: center;
+  width: 100%; /* First child div */
+  display: flex;
+  justify-content: center;
 }
 
- .birthday {
-    font-size: clamp(18px, 1.5vw, 20px);
-    line-height: 24px;
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 20px;
-  }
+.birthday {
+  font-size: clamp(18px, 1.5vw, 20px);
+  line-height: 24px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-.calendar{
-    width: 100% ;
-    padding: 5px;
-    text-align: center;
-    font-size: 16px;
-    margin-bottom: 6px;
-    cursor: pointer;
-    background-color: black;
+.calendar {
+  width: 100%;
+  padding: 5px;
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 6px;
+  cursor: pointer;
+  background-color: black;
 }
 
 .submitBtn {
-    width: 100%;
-    padding: 6px;
-    font-size: 15px;
-    font-weight: 700;
-    background-color: transparent;
-    cursor: pointer;
-    border: 1px solid white;
-    transition: all .15s ease-in-out;
-    color: white;
+  width: 100%;
+  padding: 6px;
+  font-size: 15px;
+  font-weight: 700;
+  background-color: transparent;
+  cursor: pointer;
+  border: 1px solid white;
+  transition: all 0.15s ease-in-out;
+  color: white;
 }
 
 .submitBtn:hover {
-    background-color: white;
-    color: black;
-    /* font-weight: 800; */
+  background-color: white;
+  color: black;
+  /* font-weight: 800; */
 }
 
 .calendar::placeholder {
-    color: rgba(255, 255, 255, 0.441);
+  color: rgba(255, 255, 255, 0.441);
 }
 
-@media screen and (max-width:830px) {
-    .calendar,.submitBtn {
-        width: 70%;
-    }
+@media screen and (max-width: 830px) {
+  .calendar,
+  .submitBtn {
+    width: 70%;
+  }
 }
