--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -21,6 +21,7 @@
 
 .title .apod button {
     background-color: transparent;
+    color: white;
     border: none;
     outline: 1px solid white;
     padding: 7px 15px;
