--- a/src/components/DatePicker/DatePicker.module.css
+++ b/src/components/DatePicker/DatePicker.module.css
@@ -23,8 +23,8 @@
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-weight: 500;
 }
-
 .calendar {
   width: 100%;
   padding: 5px;
@@ -33,6 +33,7 @@
   margin-bottom: 6px;
   cursor: pointer;
   background-color: black;
+  color: white;
 }
 
 .submitBtn {
