--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,27 +1,26 @@
 .container {
-    z-index: 2;
-    background-color: rgb(0, 0, 0);
-    /* width: 70%; */
-    flex: 1;
-    padding: 3%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    height: 100%;
-    transform: translateX(100%);
-    transition: all 0.3s ease-in-out;
-    display: none;
+  z-index: 2;
+  background-color: rgb(0, 0, 0);
+  /* width: 70%; */
+  flex: 1;
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 100%;
+  transform: translateX(100%);
+  transition: all 0.3s ease-in-out;
+  display: none;
+  padding-right: 0;
 }
 .container.active {
-    display: flex;
+  display: flex;
 }
-
 
 .active {
-    transform: translateX(0);
+  transform: translateX(0);
 }
-
 
 .content {
   height: 95%;
@@ -29,9 +28,10 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding-right: 20px;
 }
 
-.content .title{
+.content .title {
   font-size: clamp(25px, 2.5vw, 30px);
 }
 
@@ -40,7 +40,7 @@
 }
 
 .content .description {
-  font-size: clamp(14px, 1.5vw, 20px);
+  font-size: clamp(14px, 1.5vw, 16px);
 }
 
 .content .copyright {
@@ -48,18 +48,16 @@
 }
 
 .icon {
-    transition: all 0.15s ease-in-out;
-    cursor: pointer;
-    font-size: 20px;
+  transition: all 0.15s ease-in-out;
+  cursor: pointer;
+  font-size: 20px;
 }
 
 .icon:hover {
-    transform: translateX(5px)
+  transform: translateX(5px);
 }
 
-
-
-@media screen and (max-width:830px){
+@media screen and (max-width: 830px) {
   .container {
     position: absolute;
     right: 0;
@@ -74,6 +72,7 @@
     box-shadow: -5px 0 40px 1px black;
   }
 
-  
+  .content {
+    padding-right: 0px;
+  }
 }
-
