--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -37,8 +37,14 @@
     color: black;
 }
 
-.title h2{
+.title .apod{
     font-size: clamp(18px, 2vw, 26px);
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+.title .apob{
+    font-size: clamp(15px, 1.5vw, 26px);
     font-weight: 300;
     letter-spacing: 2px;
 }
